header nav menu added, scrollTo active slide, animations

--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,58 @@ body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
+.wrapper {
+    min-height: 100%;
+    opacity: 0;
+    transition: opacity .8 ease 0s;
+}
+
+.wrapper._loaded {
+    opacity: 1;
+}
+
+.wrapper._loaded .header {
+    transition: transform .8s ease .8s;
+    transform: translate(0px, 0px);
+}
+
+.wrapper._loaded .page__pagination {
+    transform: translate(0px, -50%);
+    opacity: 1;
+    visibility: visible;
+    transition: transform .6s ease .8s;
+}
+
+.header {
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+    z-index: 50;
+    background-color: rgba(0, 0, 0, 0.7);
+    padding: 0 20px;
+    transform: translate(0px, -100%);
+}
+
+.menu {
+    display: flex;
+    min-height: 50px;
+    align-items: center;
+}
+
+a.menu__link {
+    color: #fff;
+    font-size: 20px;
+    transition: color .3s ease 0s;
+    margin-right: 20px;
+    text-decoration: none;
+    outline: none;
+}
+
+a.menu__link._active {
+    color: #7a956b;
+}
+
 .page {
     position: fixed;
     width: 100%;
@@ -30,7 +82,7 @@ body {
 }
 
 .screen__content {
-    padding: 100px 25px 25px 25px;
+    padding: 100px 25px 25px 70px;
     position: relative;
     z-index: 2;
 }
@@ -44,7 +96,8 @@ body {
 
 .screen__title_bg {
     padding: 15px;
-    background-color: rgba(0, 0, 0, .5);
+    background-color: rgb(43 75 122 / 48%);
+    border-radius: 10px;
 }
 
 .screen__body {
@@ -63,7 +116,8 @@ body {
     top: 0;
     left: 0;
 }
-.screen__image img{
+
+.screen__image img {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -72,15 +126,18 @@ body {
     object-fit: cover;
 }
 
-.page__pagination{
+.page__pagination {
     position: absolute;
     top: 50%;
     right: 50px;
-    transform: translate(0 -50%);
+    transform: translate(70px, -50%);
+    opacity: 0;
+    visibility: hidden;
     display: flex;
     flex-direction: column;
 }
-.page__bullet{
+
+.page__bullet {
     width: 15px;
     height: 15px;
     cursor: pointer;
@@ -89,22 +146,76 @@ body {
     border-radius: 50%;
     transition: background-color 0.3 ease 0s;
 }
-.page__bullet_active{
+
+.page__bullet_active {
     background-color: #fff;
 }
-.page__scroll{
+
+.page__scroll {
     position: absolute;
     top: 0;
     right: 0;
     width: 4px;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.2);
 }
-.page__drag-scroll{
+
+.page__drag-scroll {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
-    background-color: rgba(97, 43, 43, 0.8);
+    background-color: rgba(0, 0, 0, 0.8);
     cursor: pointer;
+}
+
+.screen__text-title {
+    font-size: 36px;
+    color: #fff;
+    background-color: rgb(78 82 73);
+    padding: 14px;
+    margin-bottom: 20px;
+    border-radius: 10px;
+    font-weight: 500;
+}
+
+.screen__text {
+    font-size: 24px;
+    line-height: 124%;
+    background-color: rgb(111 116 106);
+    color: #fff;
+    padding: 50px;
+    font-weight: 400;
+}
+
+.screen__text-group {
+    display: flex;
+    justify-content: space-between;
+    padding: 0 40px;
+}
+
+.screen__text-group p {
+    margin-bottom: 30px;
+}
+
+.screen__text-txt {
+    max-width: 50%;
+    margin-right: 20px;
+}
+
+.screen__text-img {
+    border-radius: 10px;
+    max-width: 800px;
+    width: 100%;
+    margin-top: -46px;
+    height: fit-content;
+    background-color: #4e5249;
+}
+
+.screen__text-group img {
+    width: 100%;
+    border-radius: 10px;
+
+    filter: saturate(0.7);
+    opacity: .8;
 }
